force-app/main/default/objects/Property__c/fields/Available_Due__c.field-meta.xml
<CustomField>
    <fullName>Available_Due__c</fullName>
    <label>Available Due</label>
    <type>Date</type>
</CustomField>