force-app/main/default/objects/Property__c/fields/Property_Image__c.field-meta.xml
<CustomField>
    <fullName>Property_Image__c</fullName>
    <label>Property Image</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>