force-app/main/default/objects/Property__c/fields/Property_Title__c.field-meta.xml
<CustomField>
    <fullName>Property_Title__c</fullName>
    <label>Property Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>