force-app/main/default/objects/Property__c/validationRules/Available_Due_cannot_be_before_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Due_cannot_be_before_Available</fullName>
    <active>true</active>
    <errorConditionFormula>Available_From__c &gt; Available_Due__c</errorConditionFormula>
    <errorMessage>Available Due cannot be before Available From</errorMessage>
</ValidationRule>