force-app/main/default/objects/Property__c/validationRules/Price_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Price__c)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price cannot be empty</errorMessage>
</ValidationRule>