force-app/main/default/objects/Property__c/validationRules/Price_cannot_be_less_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_cannot_be_less_than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price cannot be less than Zero</errorMessage>
</ValidationRule>